R-TEST-02
RESP-2
Game distributes 12 cards from the adventure deck to each player, updating the deck	UC-01-2